# competitive-analysis-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_PLAN.md  DEVELOPMENT_PROGRESS.md  Dockerfile  OPTIMIZATION_ROADMAP.md  PRD.md  PROBLEM_LOG.md  README.md  TECHNICAL_ARCHITECTURE.md  demo.py  docker-compose.yml  pyproject.toml  requirements.txt
agent/: __init__.py  graph.py  graph_state.py  llm.py  progress.py
agent/nodes/: __init__.py  analyzer.py  extractor.py  knowledge_store.py  planner.py  reporter.py  scraper.py  searcher.py
agent/tools/: __init__.py  scraper_tool.py  search_tool.py  vector_tool.py
api/: __init__.py  app.py  auth.py  database.py  schemas.py
api/routers/: __init__.py  analysis.py  auth.py  competitors.py  qa.py  reports.py
collector/: __init__.py  apify_collector.py  app_store_collector.py  base.py  cleaner.py  github_collector.py  web_scraper.py  web_search.py
config/: __init__.py  prompts.py  settings.py
deploy/: README.md  nginx.conf
docs/prompts/: frontend-prompt.md
docs/superpowers/plans/: 2026-06-12-api-module.md  2026-06-12-data-sources.md  2026-06-12-utils-implementation.md
docs/superpowers/specs/: 2026-06-12-api-design.md  2026-06-12-apify-integration-design.md  2026-06-12-data-sources-design.md  2026-06-12-utils-design.md
examples/: agent_demo.py  collector_demo.py  knowledge_demo.py  models_demo.py  report_demo.py
frontend/: Dockerfile  README.md  index.html  nginx.conf
frontend/src/: App.tsx
frontend/src/components/charts/: FeatureTable.tsx
frontend/src/components/layout/: Sidebar.tsx  Topbar.tsx
frontend/src/components/ui/: dialog.tsx  label.tsx  pagination.tsx  select.tsx  textarea.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useTheme.ts
frontend/src/layouts/: MainLayout.tsx
frontend/src/lib/: api.ts  queryClient.ts  utils.ts
frontend/src/pages/analysis/: [id].tsx  index.tsx
frontend/src/pages/competitors/: index.tsx
frontend/src/pages/dashboard/: index.tsx
frontend/src/pages/login/: index.tsx
frontend/src/pages/qa/: index.tsx
frontend/src/pages/register/: index.tsx
frontend/src/pages/reports/: [id].tsx  index.tsx
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
knowledge/: README.md  __init__.py  embeddings.py  knowledge_base.py  vector_store.py
models/: __init__.py  analysis.py  competitor.py  report.py
report/: __init__.py  generator.py  templates.py
tests/: test_agent.py  test_api.py  test_app_store_collector.py  test_collector.py  test_github_collector.py  test_knowledge.py  test_knowledge_simple.py  test_models.py  test_report.py
utils/: date_utils.py  llm_parser.py  logger.py  report_helpers.py  retry.py  text_utils.py
utils/tests/: test_date_utils.py  test_llm_parser.py  test_logger.py  test_report_helpers.py  test_text_utils.py
