[project]
name = "competitive-analysis-agent"
version = "0.1.0"
description = "智能竞品分析Agent - 基于LLM的自动化竞品分析系统"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

dependencies = [
    # LLM框架
    "langchain>=1.3.2",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "langgraph>=1.2.2",

    # 向量数据库
    "chromadb>=0.9.0",

    # 后端框架
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.5.0",

    # 前端
    "streamlit>=1.54.0",

    # 任务队列
    "celery[redis]>=5.6.0",

    # 数据存储
    "redis>=5.2.0",  # 对应Redis Server 8.0+
    "sqlalchemy>=2.0.35",

    # 搜索与爬虫
    "serpapi>=0.1.5",
    "selenium>=4.25.0",
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
    "httpx>=0.27.2",

    # 文档解析
    "pymupdf>=1.24.10",
    "python-docx>=1.1.2",
    "unstructured>=0.16.0",

    # 工具库
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "aiohttp>=3.10.10",
    "tqdm>=4.66.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
